ensure that smartclideConfigPath is a directory fix typo